--- a/main.html
+++ b/main.html
@@ -8,8 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">Clothes</li>
+		<li data-ns-test="shoppingList">Shoes</li>
+		<li data-ns-test="shoppingList">Phone</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">Kedarnath</li>
+		<li data-ns-test="holidayList">Dehradun</li>
+		<li data-ns-test="holidayList">Mathura</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
+	
 
 </body>
 
